<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">


    <include
        layout="@layout/toolbar_layout"/>


    <TextView
        android:id="@+id/tvaboutus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About_title"
        android:layout_marginTop="90dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />



    <TextView
        android:id="@+id/tvparagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About_description1"
        android:layout_marginTop="190dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />

    <TextView
        android:id="@+id/tvparagraph1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About_description2"
        android:layout_marginTop="290dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />


</androidx.constraintlayout.widget.ConstraintLayout>






