<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Faqs">


    <include
        layout="@layout/toolbar_layout"/>

    <TextView
        android:id="@+id/tvfaqsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Faqs_title"
        android:layout_marginTop="90dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />




    <TextView
        android:id="@+id/tvfaqs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="These are frequently asked Questions"
        android:layout_marginTop="170dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <TextView
        android:id="@+id/tvfaqsQn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Faqs_Qn_1"
        android:textStyle="italic"
        android:layout_marginTop="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/tvfaqsAn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Faqs_An_1"
        android:layout_marginTop="280dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />



</androidx.constraintlayout.widget.ConstraintLayout>